[package]
name = "bdk_arti_esplora"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client we want to use in the BDK project
minreq = { version = "2.11.0", features = ["json-using-serde", "https-rustls"] }
# Tor client written in Rust
arti-client = "0.29.0"
# Common Tor libraries
tor-rtcompat = "0.29.0"
# Async runtime
tokio = { version = "1.29", features = ["full"] }
# Future utilities
futures = "0.3"
# Logging
env_logger = "0.11.7"
log = "0.4"
# Error handling
anyhow = "1.0"
thiserror = "2.0.12"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For custom transport implementation
async-trait = "0.1"
