[package]
name = "bdk_arti_esplora"
version = "0.1.0"
edition = "2021"
authors = ["PsychoPunkSage <abhinav.prakash@gmail.com>"]
description = "Proof of concept for replacing reqwest with async-minreq in rust-esplora-client with Tor integration"


[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = "0.1.68"

# HTTP clients
minreq = { version = "2.9", features = ["https", "proxy", "json-using-serde"] }

# Tor libraries
# arti-client = "0.29.0"
arti-client = { version = "0.29.0", features = ["onion-service-client"] }
tor-rtcompat = "0.29.0"
tor-socksproto = "0.29.0"

# Pin explicit versions to avoid compilation error
tor-cell = "0.29.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
default = []
